Adding rtmp library and dependency to compile gstreamer plugin

--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,11 @@
 dnl required version of autoconf
 AC_PREREQ([2.53])
 
-dnl TODO: fill in your package name and package version here
 AC_INIT([gst-plugin-rtmp],[0.0.1])
+
+GST_MAJORMINOR=0.10
+GST_REQUIRED=0.10.0
+GSTPB_REQUIRED=0.10.0
 
 dnl required versions of gstreamer and plugins-base
 GST_REQUIRED=0.10.16
@@ -78,11 +81,64 @@ AC_COMPILE_IFELSE([AC_LANG_PROGRAM([ ], [ ])], [
   AC_MSG_RESULT([no])
 ])
 
+if test "x$HAVE_RTMP" = "xyes"; then
+  PKG_CHECK_MODULES(RTMP, librtmp) 
+  saved_CPPFLAGS="$CPPFLAGS"
+  CPPFLAGS="$CPPFLAGS $RTMP_CFLAGS"
+  CPPFLAGS="$saved_CPPFLAGS"
+  AC_DEFINE([RTMP_SOURCE], ["system install"], [Describes where the Librtmp libraries come from.])
+  HAVE_RTMP_UNINSTALLED=0
+  AC_MSG_NOTICE([Using system-installed RTMP code])
+else
+  echo $top_srcdir
+  AC_MSG_NOTICE([Using local Libav snapshot])
+  dnl libgstrtmp.la: include dirs
+  RTMP_CFLAGS="-I \$(top_srcdir)/gst-libs/ext/librtmp/librtmp \
+                 -Wno-deprecated-declarations"
+
+  dnl libgstrtmp.la: libs to statically link to        
+  RTMP_LIBS="\$(top_builddir)/gst-libs/ext/librtmp/librtmp.a"
+
+  RTMP_SUBDIRS=gst-libs
+  AC_DEFINE([RTMP_SOURCE], ["local snapshot"], [Describes where the Librtmp libraries come from.])
+  AC_ARG_WITH(rtmp-extra-configure, 
+      AC_HELP_STRING([--with-rtmp-extra-configure="xxx"],
+      [extra configure options for internal ffmpeg ./configure script]),,
+      with_rtmp_extra_configure=no)
+
+  # basic arguments
+  embrtmp_configure_args=""
+
+  # Enable pic and static so that we get .a files, but with PIC code.
+  embrtmp_configure_args="$embrtmp_configure_args SHARED= CRYPTO="
+
+  AC_SUBST(RTMP_CO_DIR)
+  AC_SUBST(RTMP_SVN)
+  AC_SUBST(RTMP_REVISION)
+  AC_SUBST(RTMP_EXTERNALS_REVISION)
+  AC_CONFIG_COMMANDS([configure-embedded-rtmp],
+    [echo "Configuring included Librtmp instance with args $embrtmp_configure_args"
+     origdir=`pwd`
+     if test -z "$srcdir" -o "$srcdir" = .; then
+       confcmd=make
+     else
+       confcmd="$origdir"/"$ac_top_srcdir"/gst-libs/ext/librtmp/make
+     fi
+     AS_MKDIR_P(["$ac_top_build_prefix"gst-libs/ext/librtmp])
+     cd "$ac_top_build_prefix"gst-libs/ext/librtmp &&
+         eval "$confcmd $embrtmp_configure_args" ||
+         AC_MSG_ERROR([Failed to configure embedded Librtmp tree])
+     cd "$origdir"
+    ],
+    [embrtmp_configure_args="$embrtmp_configure_args"])
+  AC_MSG_NOTICE([Using included Librtmp code])
+fi
+
 dnl set the plugindir where plugins should be installed (for src/Makefile.am)
 if test "x${prefix}" = "x$HOME"; then
-  plugindir="$HOME/.gstreamer-0.10/plugins"
+  plugindir="$HOME/.gstreamer-$GST_MAJORMINOR/plugins"
 else
-  plugindir="\$(libdir)/gstreamer-0.10"
+  plugindir="\$(libdir)/gstreamer-$GST_MAJORMINOR"
 fi
 AC_SUBST(plugindir)
 
@@ -90,6 +146,10 @@ dnl set proper LDFLAGS for plugins
 GST_PLUGIN_LDFLAGS='-module -avoid-version -export-symbols-regex [_]*\(gst_\|Gst\|GST_\).*'
 AC_SUBST(GST_PLUGIN_LDFLAGS)
 
-AC_CONFIG_FILES([Makefile src/Makefile])
+AC_CONFIG_FILES(
+Makefile
+gst-libs/Makefile
+gst-libs/ext/Makefile
+src/Makefile
+)
 AC_OUTPUT
-
