Added backup uri, used when the main one is not accessible

--- a/gst-libs/ext/librtmp/Makefile
+++ b/gst-libs/ext/librtmp/Makefile
@@ -82,10 +82,8 @@ OBJS=rtmp.o log.o amf.o hashswf.o parseurl.o
 
 all:	librtmp.a $(SO_LIB)
 
-clean:
+distclean:
 	rm -f *.o *.a *.$(SOX) *$(SO_EXT) librtmp.pc
-
-distclean: clean
 
 
 librtmp.a: $(OBJS)
