--- a/gst-libs/ext/librtmp/Makefile
+++ b/gst-libs/ext/librtmp/Makefile
@@ -83,7 +83,7 @@ OBJS=rtmp.o log.o amf.o hashswf.o parseurl.o
 all:	librtmp.a $(SO_LIB)
 
 distclean:
-	rm -f *.o *.a *.$(SOX) *$(SO_EXT) librtmp.pc
+	rm -f *.o *.a librtmp.pc
 
 
 librtmp.a: $(OBJS)
