--- a/gst-libs/ext/librtmp/Makefile
+++ b/gst-libs/ext/librtmp/Makefile
@@ -82,8 +82,10 @@ OBJS=rtmp.o log.o amf.o hashswf.o parseurl.o
 
 all:	librtmp.a $(SO_LIB)
 
+clean:
+
 distclean:
-	rm -f *.o *.a librtmp.pc
+	rm -f *.o *.a *.$(SOX) *$(SO_EXT) librtmp.pc
 
 
 librtmp.a: $(OBJS)
